--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ footer{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-basis: | auto;
+  flex-basis: auto;
 
 }
 
