--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,10 @@ footer{
   padding: 0 0 50px 0;
   /*Your code here.*/
   /*Take a look at flex-basis*/
-  width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-basis: 1;
+  flex-basis: 400px;
 
 }
 
@@ -197,8 +196,7 @@ header{
   /* Cards! */
   .card {
     /*Your  code here again.*/
-    width: 225px;
-    flex-basis: auto;
+    flex-basis: 225px;
 
 
   }
