--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ header{
 
 /*Your code here again.*/
 /*Add media query to handle reduced-motion*/
-@media (prefers-reduced-motion) {
-  .animation {
-    animation-name: logo_wiggle;
+@media (prefers-reduced-motion: reduce) {
+  #logo {
+    animation: none;
   }
